crates/qwik-optimizer-oxc/tests/snapshots/example_5.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";
export const Header = component$(() => {
  return (
    <>
      <div onClick={(ctx) => console.log("1")} />
      <div onClick={$((ctx) => console.log("2"))} />
    </>
  );
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_div_q_e_click_XXXXXXXXXXXX");
export const Header = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_component_XXXXXXXXXXXX"),
);

=== test.tsx_Header_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_div_q_e_click_XXXXXXXXXXXX");
export const Header_component_XXXXXXXXXXXX = () => {
  return (
    <>
      <div onClick={(ctx) => console.log("1")} />
      <div
        onClick={/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_component_div_q_e_click_XXXXXXXXXXXX")}
      />
    </>
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Header_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Header_component_div_q_e_click_XXXXXXXXXXXX.tsx === (ENTRY)
export const Header_component_div_q_e_click_XXXXXXXXXXXX = (ctx) => console.log("2");

/*
{
  "origin": "test.tsx",
  "name": "Header_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_Header_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
