crates/qwik-optimizer-oxc/tests/snapshots/example_8.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_Qw9nV3mG0KQ = () => import("./test.tsx_Header_component_Qw9nV3mG0KQ");
const i_QrzcmFeRo0o = () => import("./test.tsx_Header_QrzcmFeRo0o");
export const Header = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_Qw9nV3mG0KQ, "Header_component_Qw9nV3mG0KQ"));

=== test.tsx_Header_component_Qw9nV3mG0KQ.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_QrzcmFeRo0o = () => import("./test.tsx_Header_QrzcmFeRo0o");
export const Header_component_Qw9nV3mG0KQ = () => {
	return /* @__PURE__ */ qrl(i_QrzcmFeRo0o, "Header_QrzcmFeRo0o");
};

=== test.tsx_Header_QrzcmFeRo0o.tsx === (ENTRY)
export const Header_QrzcmFeRo0o = (hola) => {
	const hola = this;
	const { something, styff } = hola;
	const hello = hola.nothere.stuff[global];
	return <Header />;
}
