crates/qwik-optimizer-oxc/tests/snapshots/example_build_server.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test_App_component_XumqEURaLxI");
import { component$, useStore } from "@qwik.dev/core";
import { mongodb } from "mondodb";
import { threejs } from "threejs";
import L from "leaflet";
export const functionThatNeedsWindow = () => {};
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_App_component_XumqEURaLxI.tsx === (ENTRY)
export const App_component_XumqEURaLxI = () => {
	useMount$(() => {
		console.log("server", mongodb());
	});
	return <Cmp>
			{<p>server</p>}
			{false}
		</Cmp>;
}
