crates/qwik-optimizer-oxc/tests/snapshots/example_capture_imports.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI");
const i_IUcvUpNH0v8 = () => import("./test.tsx_App_useStyles_IUcvUpNH0v8");
const i_IUcvUpNH0v8 = () => import("./test.tsx_App_useStyles_IUcvUpNH0v8");
import css1 from "./global.css";
import css2 from "./style.css";
import css3 from "./style.css";
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_App_component_XumqEURaLxI.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_IUcvUpNH0v8 = () => import("./test.tsx_App_useStyles_IUcvUpNH0v8");
const i_IUcvUpNH0v8 = () => import("./test.tsx_App_useStyles_IUcvUpNH0v8");
import { useStylesQrl } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = () => {
	useStylesQrl(/* @__PURE__ */ qrl(i_IUcvUpNH0v8, "App_useStyles_IUcvUpNH0v8"));
	useStylesQrl(/* @__PURE__ */ qrl(i_IUcvUpNH0v8, "App_useStyles_IUcvUpNH0v8"));
};

=== test.tsx_App_useStyles_IUcvUpNH0v8.js === (ENTRY)
import css1 from "./global.css";
import css2 from "./style.css";
export const App_useStyles_IUcvUpNH0v8 = `${css1}${css2}`;

=== test.tsx_App_useStyles_IUcvUpNH0v8.js === (ENTRY)
import css3 from "./style.css";
export const App_useStyles_IUcvUpNH0v8 = css3;
