crates/qwik-optimizer-oxc/tests/snapshots/example_capturing_fn_class.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";

export const App = component$(() => {
  function hola() {
    console.log("hola");
  }
  class Thing {}
  class Other {}

  return $(() => {
    hola();
    new Thing();
    return <div></div>;
  });
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_XXXXXXXXXXXX");
export const App_component_XXXXXXXXXXXX = () => {
  function hola() {
    console.log("hola");
  }
  class Thing {}
  class Other {}
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_XXXXXXXXXXXX", [hola, Thing]);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_App_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const App_XXXXXXXXXXXX = () => {
  const hola = _captures[0];
  const Thing = _captures[1];
  hola();
  new Thing();
  return /* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null);
};

/*
{
  "origin": "test.tsx",
  "name": "App_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_App_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "hola",
    "Thing"
  ]
}
*/

=== DIAGNOSTICS ===

[]
