crates/qwik-optimizer-oxc/tests/snapshots/example_class_name.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export const App2 = component$(() => {
  const signal = useSignal();
  const computed = signal.value + "foo";
  return (
    <>
      <div className="hola"></div>
      <div className={signal.value}></div>
      <div className={signal}></div>
      <div className={computed}></div>

      <Foo className="hola"></Foo>
      <Foo className={signal.value}></Foo>
      <Foo className={signal}></Foo>
      <Foo className={computed}></Foo>
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App2_component_XXXXXXXXXXXX.js");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App2 = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App2_component_XXXXXXXXXXXX"),
);

=== test.tsx_App2_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App2_component_XXXXXXXXXXXX = () => {
  const signal = useSignal();
  const computed = signal.value + "foo";
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted("div", null, { className: "hola" }, null, 3, "u6_0"),
      /* @__PURE__ */ _jsxSorted("div", null, { className: _wrapProp(signal) }, null, 3, "u6_1"),
      /* @__PURE__ */ _jsxSorted("div", { className: signal }, null, null, 3, "u6_2"),
      /* @__PURE__ */ _jsxSorted("div", { className: computed }, null, null, 3, "u6_3"),
      /* @__PURE__ */ _jsxSorted(Foo, null, { className: "hola" }, null, 3, "u6_4"),
      /* @__PURE__ */ _jsxSorted(Foo, null, { className: _wrapProp(signal) }, null, 3, "u6_5"),
      /* @__PURE__ */ _jsxSorted(Foo, { className: signal }, null, null, 3, "u6_6"),
      /* @__PURE__ */ _jsxSorted(Foo, { className: computed }, null, null, 3, "u6_7"),
    ],
    1,
    "u6_8",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App2_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App2_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App2_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
