crates/qwik-optimizer-oxc/tests/snapshots/example_component_with_event_listeners_inside_loop.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStore, useSignal } from '@qwik.dev/core';
export const App = component$(() => {
      const cart = useStore<string[]>([]);
      const results = useSignal(['foo']);
      function loopArrowFn(results: string[]) { /* map with onClick$ */ }
      function loopForI(results: string[]) { /* for-i with onClick$ */ }
      function loopForOf(results: string[]) { /* for-of with onClick$ */ }
      function loopForIn(results: string[]) { /* for-in with onClick$ */ }
      function loopWhile(results: string[]) { /* while with onClick$ */ }
      return (
        <div>
          {results.value.map((item) => (<button id="second" onClick$={...}>{item}</button>))}
          {loopArrowFn(results.value)}
          {/* ... other loop calls */}
        </div>
      );
    });


=== DIAGNOSTICS ===
[SourceError] Unexpected token
