crates/qwik-optimizer-oxc/tests/snapshots/example_custom_inlined_functions.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { useMemoQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI");
const i_920F189NvqI = () => import("./test.tsx_useMemo_920F189NvqI");
const i_Ma8uJBKLX2o = () => import("./test.tsx_s__Ma8uJBKLX2o");
const i_cCpbVobVcXY = () => import("./test.tsx_Lightweight_useMemo_cCpbVobVcXY");
import { component$, $, useStore, wrap, useEffect } from "@qwik.dev/core";
export const useMemoQrl = (qrt) => {
	useEffect(qrt);
};
export const useMemo$ = wrap(useMemoQrl);
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));
export const Lightweight = (props) => {
	/* @__PURE__ */ useMemoQrl(/* @__PURE__ */ qrl(i_cCpbVobVcXY, "Lightweight_useMemo_cCpbVobVcXY"));
};

=== test.tsx_App_component_XumqEURaLxI.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_920F189NvqI = () => import("./test.tsx_useMemo_920F189NvqI");
const i_Ma8uJBKLX2o = () => import("./test.tsx_s__Ma8uJBKLX2o");
export const App_component_XumqEURaLxI = (props) => {
	const state = useStore({ count: 0 });
	/* @__PURE__ */ useMemoQrl(/* @__PURE__ */ qrl(i_920F189NvqI, "useMemo_920F189NvqI", [state]));
	return /* @__PURE__ */ qrl(i_Ma8uJBKLX2o, "s__Ma8uJBKLX2o", [state]);
};

=== test.tsx_useMemo_920F189NvqI.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const useMemo_920F189NvqI = () => {
	const state = _captures[0];
	console.log(state.count);
};

=== test.tsx_s__Ma8uJBKLX2o.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const s__Ma8uJBKLX2o = () => {
	const state = _captures[0];
	return /* @__PURE__ */ _jsxSorted("div", null, null, state.count, 3, "u6_0");
};

=== test.tsx_Lightweight_useMemo_cCpbVobVcXY.js === (ENTRY)
export const Lightweight_useMemo_cCpbVobVcXY = () => {
	console.log(state.count);
};
