crates/qwik-optimizer-oxc/tests/snapshots/example_dead_code.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
import { deps } from "deps";

export const Foo = component$(({ foo }) => {
  useMount$(() => {
    if (false) {
      deps();
    }
  });
  return <div />;
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_gZqPatVoDqw = () => import("./test.tsx_Foo_component_gZqPatVoDqw");
import { deps } from "deps";
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"),
);

=== test.tsx_Foo_component_gZqPatVoDqw.tsx === (ENTRY)
import { deps } from "deps";
export const Foo_component_gZqPatVoDqw = (_rawProps) => {
  useMount$(() => {
    if (false) {
      deps();
    }
  });
  return <div />;
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_gZqPatVoDqw",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "gZqPatVoDqw",
  "canonicalFilename": "test.tsx_Foo_component_gZqPatVoDqw",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "_rawProps"
  ]
}
*/
